--- a/src/sdg/scss/components/_radioFieldset.scss
+++ b/src/sdg/scss/components/_radioFieldset.scss
@@ -47,10 +47,15 @@
   color: token-value(color, red, regular);
   margin-top: token-value(spacer, sm);
   align-items: center;
+  height: token-value(spacer, md);
 
   p {
     margin-left: token-value(spacer, xs);
     margin-bottom: 0;
     align-items: center;
   }
+}
+
+.qc-radio-invalid-hidden {
+  display: none;
 }
