--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -1968,11 +1968,16 @@ input[type=radio]::before {
   color: var(--qc-color-red-regular);
   margin-top: var(--qc-spacer-sm);
   align-items: center;
+  height: var(--qc-spacer-md);
 }
 .qc-radio-invalid p {
   margin-left: var(--qc-spacer-xs);
   margin-bottom: 0;
   align-items: center;
+}
+
+.qc-radio-invalid-hidden {
+  display: none;
 }
 
 .qc-container,
