Ajout d'attributs aria pour accessibilite avec levteur d'ecran

--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -1918,10 +1918,6 @@ input[type=radio]::before {
   background: var(--qc-color-blue-regular);
 }
 
-.qc-radio-required {
-  color: var(--qc-color-red-regular);
-}
-
 .qc-radio-fieldset-md, .qc-radio-fieldset-sm {
   display: flex;
   flex-direction: column;
@@ -1957,6 +1953,19 @@ input[type=radio]::before {
 .radio-options-md {
   margin-top: var(--qc-spacer-md);
   row-gap: var(--qc-spacer-sm);
+}
+
+.qc-radio-required {
+  color: var(--qc-color-red-regular);
+}
+
+.qc-radio-required-text {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
 }
 
 .qc-fieldset-invalid {
