--- a/src/sdg/scss/qc-sgd-no-grid.scss
+++ b/src/sdg/scss/qc-sgd-no-grid.scss
@@ -20,4 +20,4 @@
 @use "components/searchBar";
 @use "components/searchInput";
 @use "components/radioButton";
-@use "components/radioFieldset";
+@use "components/radioGroup";
