--- a/src/sdg/scss/qc-sgd-no-grid.scss
+++ b/src/sdg/scss/qc-sgd-no-grid.scss
@@ -21,3 +21,5 @@
 @use "components/searchInput";
 @use "components/radioButton";
 @use "components/radioFieldset";
+@use "components/checkbox";
+@use "components/checkboxGroup";
