--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -1979,3 +1979,144 @@ input[type=radio]::before {
 .qc-radio-invalid-hidden {
   display: none;
 }
+
+.checkbox-md, .checkbox-sm {
+  display: flex;
+  align-items: center;
+  height: var(--qc-spacer-md);
+  margin: 0;
+}
+.checkbox-md input[type=checkbox], .checkbox-sm input[type=checkbox] {
+  -moz-appearance: none;
+       appearance: none;
+  -webkit-appearance: none;
+  cursor: pointer;
+  display: flex;
+  position: relative;
+  margin-right: var(--qc-spacer-xs);
+  margin-top: 0;
+  margin-left: 0;
+  background-color: var(--qc-color-white);
+  border-style: solid;
+  border-color: var(--qc-color-blue-dark);
+}
+.checkbox-md input[type=checkbox]::before, .checkbox-sm input[type=checkbox]::before {
+  content: "";
+  position: absolute;
+  margin: auto;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  overflow: hidden;
+}
+.checkbox-md input[type=checkbox]:focus, .checkbox-sm input[type=checkbox]:focus {
+  outline: 0.2rem solid var(--qc-color-blue-light);
+  outline-offset: 0;
+  border-color: var(--qc-color-blue-dark) !important;
+}
+.checkbox-md input[type=checkbox]:checked, .checkbox-sm input[type=checkbox]:checked {
+  border-color: var(--qc-color-blue-regular);
+}
+.checkbox-md input[type=checkbox]:disabled, .checkbox-sm input[type=checkbox]:disabled {
+  cursor: not-allowed;
+  border-color: var(--qc-color-grey-light);
+}
+.checkbox-md input[type=checkbox]:disabled + label, .checkbox-sm input[type=checkbox]:disabled + label {
+  color: var(--qc-color-grey-regular);
+  cursor: not-allowed;
+}
+.checkbox-md label, .checkbox-sm label {
+  display: flex;
+  align-items: end;
+  cursor: pointer;
+  margin-right: var(--qc-spacer-xs);
+  margin-bottom: 0;
+  font-size: var(--qc-font-size-md);
+  line-height: var(--qc-line-height-md);
+  font-weight: var(--qc-font-weight-regular);
+}
+
+.checkbox-sm input {
+  width: var(--qc-spacer-sm);
+  height: var(--qc-spacer-sm);
+  border-width: 0.1rem;
+}
+.checkbox-sm input[type=checkbox]:checked::before {
+  width: 0.8rem;
+  height: 0.5rem;
+  border: 0.2rem solid var(--qc-color-blue-regular);
+  border-top: 0;
+  border-right: 0;
+  transform: rotate(-45deg);
+  top: 0.1rem;
+}
+
+.checkbox-md input {
+  width: var(--qc-spacer-md);
+  height: var(--qc-spacer-md);
+  border-width: 0.2rem;
+}
+.checkbox-md input[type=checkbox]:checked::before {
+  width: 1.2rem;
+  height: 0.7rem;
+  border: 0.3rem solid var(--qc-color-blue-regular);
+  border-top: 0;
+  border-right: 0;
+  transform: rotate(-45deg);
+  top: 0.2rem;
+}
+
+.qc-checkbox-fieldset-md, .qc-checkbox-fieldset-sm {
+  display: flex;
+  flex-direction: column;
+  border: none;
+  padding: 0.001em 0 0 0;
+  margin-left: var(--qc-spacer-xs);
+  margin-bottom: var(--qc-spacer-sm);
+}
+
+.qc-checkbox-fieldset-sm {
+  font-size: var(--qc-font-size-sm);
+  line-height: var(--qc-line-height-sm);
+  font-weight: var(--qc-font-weight-bold);
+}
+
+.qc-checkbox-fieldset-md {
+  font-size: var(--qc-font-size-md);
+  line-height: var(--qc-line-height-md);
+  font-weight: var(--qc-font-weight-bold);
+}
+
+.checkbox-options-md, .checkbox-options-sm {
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+}
+
+.checkbox-options-sm {
+  margin-top: var(--qc-spacer-sm);
+  row-gap: var(--qc-spacer-xs);
+}
+
+.checkbox-options-md {
+  margin-top: var(--qc-spacer-md);
+  row-gap: var(--qc-spacer-sm);
+}
+
+.qc-checkbox-invalid {
+  display: flex;
+  color: var(--qc-color-red-regular);
+  margin-top: var(--qc-spacer-sm);
+  align-items: center;
+  height: var(--qc-spacer-md);
+}
+.qc-checkbox-invalid p {
+  margin-left: var(--qc-spacer-xs);
+  margin-bottom: 0;
+  align-items: center;
+}
+
+.qc-checkbox-invalid-hidden {
+  display: none;
+}
