--- a/src/sdg/scss/components/_checkboxGroup.scss
+++ b/src/sdg/scss/components/_checkboxGroup.scss
@@ -20,20 +20,20 @@
   @include content-font(md, bold);
 }
 
-%checkbox-options {
+%checkbox-group {
   display: flex;
   flex-direction: column;
   justify-items: center;
 }
 
-.checkbox-options-sm {
-  @extend %checkbox-options;
+.checkbox-group-sm {
+  @extend %checkbox-group;
   margin-top: token-value(spacer, sm);
   row-gap: token-value(spacer, xs);
 }
 
-.checkbox-options-md {
-  @extend %checkbox-options;
+.checkbox-group-md {
+  @extend %checkbox-group;
   margin-top: token-value(spacer, md);
   row-gap: token-value(spacer, sm);
 }
