--- a/src/sdg/scss/components/_radioButton.scss
+++ b/src/sdg/scss/components/_radioButton.scss
@@ -16,9 +16,7 @@
     display: flex;
     position: relative;
 
-    margin-right: token-value(spacer, xs);
-    margin-top: 0;
-    margin-left: 0;
+    margin: 0;
 
     background-color: token-value(color, white);
     border-style: solid;
@@ -61,7 +59,8 @@
     display: flex;
     align-items: end;
     cursor: pointer;
-    margin-right: token-value(spacer, xs);
+    padding-left: token-value(spacer, xs);
+    padding-right: token-value(spacer, xs);
     margin-bottom: 0;
     @include content-font(md);
   }
