--- a/src/sdg/scss/qc-sgd-no-grid.scss
+++ b/src/sdg/scss/qc-sgd-no-grid.scss
@@ -20,6 +20,6 @@
 @use "components/searchBar";
 @use "components/searchInput";
 @use "components/radioButton";
-@use "components/radioFieldset";
+@use "components/radioGroup";
 @use "components/checkbox";
 @use "components/checkboxGroup";
