--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -1917,22 +1917,13 @@ input[type=radio]::before {
   background: var(--qc-color-blue-regular);
 }
 
-.qc-radio-fieldset-md, .qc-radio-fieldset-sm {
+.qc-radio-fieldset {
   display: flex;
   flex-direction: column;
   border: none;
   padding: 0.001em 0 0 0;
   margin-left: var(--qc-spacer-xs);
   margin-bottom: var(--qc-spacer-sm);
-}
-
-.qc-radio-fieldset-sm {
-  font-size: var(--qc-font-size-sm);
-  line-height: var(--qc-line-height-sm);
-  font-weight: var(--qc-font-weight-bold);
-}
-
-.qc-radio-fieldset-md {
   font-size: var(--qc-font-size-md);
   line-height: var(--qc-line-height-md);
   font-weight: var(--qc-font-weight-bold);
