--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -2107,6 +2107,12 @@ input[type=radio]::before {
   font-weight: var(--qc-font-weight-bold);
 }
 
+.qc-checkbox-fieldset-md {
+  font-size: var(--qc-font-size-md);
+  line-height: var(--qc-line-height-md);
+  font-weight: var(--qc-font-weight-bold);
+}
+
 .qc-checkbox-legend {
   font-size: var(--qc-font-size-md);
   line-height: var(--qc-line-height-md);
@@ -2117,16 +2123,16 @@ input[type=radio]::before {
   padding: 0;
 }
 
-.qc-checkbox-fieldset-md {
-  font-size: var(--qc-font-size-md);
-  line-height: var(--qc-line-height-md);
-  font-weight: var(--qc-font-weight-bold);
+fieldset {
+  border: none;
 }
 
 .checkbox-group-md, .checkbox-group-sm {
   display: flex;
   flex-direction: column;
   justify-items: center;
+  margin-left: var(--qc-spacer-xs);
+  padding: 0;
 }
 
 .checkbox-group-sm {
@@ -2142,7 +2148,6 @@ input[type=radio]::before {
 .qc-checkbox-invalid {
   display: flex;
   color: var(--qc-color-red-regular);
-  margin-top: var(--qc-spacer-sm);
   align-items: center;
   height: var(--qc-spacer-md);
 }
@@ -2150,6 +2155,9 @@ input[type=radio]::before {
   margin-left: var(--qc-spacer-xs);
   margin-bottom: 0;
   align-items: center;
+  font-size: var(--qc-font-size-md);
+  line-height: var(--qc-line-height-md);
+  font-weight: var(--qc-font-weight-bold);
 }
 
 .qc-checkbox-invalid-hidden {
