--- a/src/sdg/scss/components/_checkboxGroup.scss
+++ b/src/sdg/scss/components/_checkboxGroup.scss
@@ -57,6 +57,7 @@ fieldset {
   color: token-value(color, red, regular);
   align-items: center;
   height: token-value(spacer, md);
+  margin-left: token-value(spacer, xs);
 
   p {
     margin-left: token-value(spacer, xs);
