--- a/src/sdg/scss/components/_radioGroup.scss
+++ b/src/sdg/scss/components/_radioGroup.scss
@@ -42,7 +42,7 @@
   color: token-value(color, red, regular);
   margin-top: token-value(spacer, sm);
   align-items: center;
-  height: token-value(spacer, md);
+  min-height: token-value(spacer, md);
 
   p {
     margin-left: token-value(spacer, xs);
