--- a/src/sdg/scss/components/_checkbox.scss
+++ b/src/sdg/scss/components/_checkbox.scss
@@ -4,9 +4,9 @@
 %checkbox-style {
   display: flex;
   align-items: center;
-  height: token-value(spacer, md);
+  min-height: token-value(spacer, md);
   margin: 0;
-  padding: 0 token-value(spacer, xs);
+  padding: 0;
 
   input[type="checkbox"] {
     appearance: none;
